# git-issue-to-markdown

./: .gitignore  README.md  close.bat  closewithcomment.bat  comment.bat  pyproject.toml  reopen.bat  start.bat
src/git_issue_to_markdown/: __init__.py  gitea_client.py  main.py  markdown_writer.py
src/git_issue_to_markdown/config/: constants.py  settings.py
tests/: __init__.py  test_config.example.json  test_gitea_client.py  test_integration.py  test_markdown_writer.py
